# OrayS

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  Makefile.desktop  README.md  crates.js  index.html  output_la.md  output_rv.md  run-eval.sh  search-index.js  self-check.md  src-files.js
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
api/orays_linux/: Cargo.toml
api/orays_linux/src/: backend.rs  lib.rs  syscall.rs  user.rs
api/orays_linux_abi/: Cargo.toml
api/orays_linux_abi/src/: constants.rs  lib.rs  syscall.rs  time.rs
arceos_posix_api/: all.html  fn.fd_table_assigned_count.html  fn.force_socket_recv_buffer_size.html  fn.force_socket_send_buffer_size.html  fn.poll_file_like.html  fn.set_socket_recv_buffer_size.html  fn.set_socket_recv_timeout.html  fn.set_socket_reuse_addr.html  fn.set_socket_send_buffer_size.html  fn.set_socket_send_timeout.html  fn.set_socket_tcp_nodelay.html  fn.socket_recv_buffer_size.html  fn.socket_recv_timeout.html  fn.socket_reuse_addr.html  fn.socket_send_buffer_size.html  fn.socket_send_timeout.html  fn.socket_tcp_max_segment_size.html  fn.socket_tcp_nodelay.html  fn.sys_accept.html  fn.sys_bind.html  fn.sys_clock_gettime.html  fn.sys_close.html  fn.sys_connect.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_epoll_create.html  fn.sys_epoll_create1.html  fn.sys_epoll_ctl.html  fn.sys_epoll_wait.html  fn.sys_exit.html  fn.sys_fcntl.html  fn.sys_freeaddrinfo.html  fn.sys_fstat.html  fn.sys_getaddrinfo.html  fn.sys_getcwd.html  fn.sys_getpeername.html  fn.sys_getpid.html  fn.sys_getrlimit.html  fn.sys_getsockname.html  fn.sys_listen.html  (+31 more)
axalloc/: all.html  fn.allocation_bucket_stats.html  fn.frame_allocator_stats.html  fn.global_add_memory.html  (+8 more)
kernel/fs/axfile/: Cargo.toml
kernel/fs/axfile/src/: lib.rs
user/desktop/: AGENTS.md  Cargo.toml  Makefile  README.md
user/desktop/assets/: README.md  manifest.json
user/desktop/assets/fonts/: README.md
user/desktop/assets/icons/: README.md
user/desktop/assets/licenses/: README.md
user/desktop/assets/wallpapers/: README.md
user/desktop/src/: app.rs  lib.rs  main.rs
user/desktop/src/apps/: file_manager.rs  image_viewer.rs  mod.rs  settings.rs  system_monitor.rs  terminal.rs  text_editor.rs
user/desktop/src/desktop/: compositor.rs  dock.rs  launcher.rs  mod.rs  notifications.rs  shell.rs  shortcuts.rs  theme.rs  top_bar.rs  window.rs  window_manager.rs
user/desktop/src/graphics/: damage.rs  geometry.rs  image.rs  mod.rs  painter.rs  shadow.rs  surface.rs  text.rs
user/desktop/src/platform/: display.rs  filesystem.rs  input.rs  mod.rs  system.rs  time.rs  virtio.rs
user/desktop/src/widgets/: button.rs  dialog.rs  label.rs  list.rs  menu.rs  mod.rs  scrollbar.rs  text_input.rs
user/desktop/tests/: apps.rs  graphics.rs  input.rs  shell.rs  window_manager.rs
(+5027 files in other folders)
