[package]
name = "orays-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Implementation-independent Linux compatibility boundary for OrayS"

[features]
default = []
alloc = []

[dependencies]
orays-linux-abi = { workspace = true }
